--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,21 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
+flask = "2.1.2"
+jinja2 = "3.1.2"
 pandas = "*"
-flask_mail = "*"
-flask_script = "*"
+flask_mail = "0.9.1"
+flask-script = "*"
 MarkupSafe = "2.0.1"
+flask-apscheduler = "1.12.3"
+flask-avatars = "0.2.2"
+flask-fors = "3.0.10"
+flask-caching = "1.10.1"
+flask-seasurf = "1.1.1"
+openpyxl = "3.0.9"
+numpy = "1.21.6"
+numba = "0.55.1"
+
 
 
 [dev-packages]
