--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,65 @@
-Flask~=2.1.2
-MarkupSafe~=2.1.1
-setuptools~=62.2.0
-pandas~=1.4.2
+apscheduler==3.9.1
+beautifulsoup4==4.11.1
+blinker==1.4
+bs4==0.0.1
+cachelib==0.7.0
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.12
+click==8.1.3
+colorama==0.4.4
+cssmin==0.2.0
+distlib==0.3.4
+et-xmlfile==1.1.0
+fake-useragent==0.1.11
+filelock==3.7.0
+Flask==2.1.2
+Flask-APScheduler==1.12.3
+Flask-Assets==2.0
+Flask-Avatars==0.2.2
+Flask-Caching==1.10.1
+Flask-Cors==3.0.10
+Flask-DebugToolbar==0.13.1
+Flask-Mail==0.9.1
+Flask-Script==2.0.6
+Flask-SeaSurf==1.1.1
+Flask-Session==0.4.0
+Flask-SSLify==0.1.5
+gevent==21.12.0
+greenlet==1.1.2
+gunicorn==20.1.0
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jsmin==3.0.1
+llvmlite==0.38.0
+MarkupSafe==2.1.1
+numba==0.55.1
+numpy==1.21.6
+openpyxl==3.0.9
+pandas==1.4.2
+Pillow==9.1.0
+pipenv==2022.5.2
+platformdirs==2.5.2
+psutil==5.9.0
+pycparser==2.21
+python-dateutil==2.8.2
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+readerwriterlock==1.0.9
+requests==2.27.1
+six==1.16.0
+soupsieve==2.3.2.post1
+typing_extensions==4.2.0
+tzdata==2022.1
+tzlocal==4.2
+ua-parser==0.10.0
+urllib3==1.26.9
+user-agents==2.2.0
+virtualenv==20.14.1
+virtualenv-clone==0.5.7
+webassets==2.0
+Werkzeug==2.1.2
+zope.event==4.5.0
+zope.interface==5.4.0
