the 74th commit

--- a/wsgi.ini
+++ b/wsgi.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-socket = 0.0.0.0:8000
+http-socket = 0.0.0.0:8000
 chdir = /tmp/flask
 reload-mercy=8
 master = True
@@ -8,8 +8,7 @@ buffer-size = 65535
 wsgi-file = /tmp/flask/wsgi.py
 callable = app
 processes = 1
-threads = 100
-daemonize = ./files/logs/uwsgi.log
+threads = 4
 vacuum = true
 lazy-apps=true
 
