--- a/wsgi.ini
+++ b/wsgi.ini
@@ -1,14 +1,11 @@
 [uwsgi]
-http-socket = 0.0.0.0:8000
+socket = 0.0.0.0:8000
 chdir = /tmp/flask
 reload-mercy=8
 master = True
-reload-on-as = 16000
-buffer-size = 65535
 wsgi-file = /tmp/flask/wsgi.py
 callable = app
 processes = 1
 threads = 60
 vacuum = true
 lazy-apps=true
-
