--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-apscheduler==3.9.1
+APScheduler==3.9.1
+asgiref==3.5.2
+asttokens==2.0.5
+backcall==0.2.0
 beautifulsoup4==4.11.1
 blinker==1.4
 bs4==0.0.1
@@ -9,9 +12,13 @@ chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.4
+commonmark==0.9.1
 cssmin==0.2.0
+decorator==5.1.1
+Deprecated==1.2.13
 distlib==0.3.4
 et-xmlfile==1.1.0
+executing==0.8.3
 fake-useragent==0.1.11
 filelock==3.7.0
 Flask==2.1.2
@@ -21,6 +28,7 @@ Flask-Avatars==0.2.2
 Flask-Caching==1.10.1
 Flask-Cors==3.0.10
 Flask-DebugToolbar==0.13.1
+Flask-Limiter==2.4.5.1
 Flask-Mail==0.9.1
 Flask-Script==2.0.6
 Flask-SeaSurf==1.1.1
@@ -30,27 +38,42 @@ gevent==21.12.0
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
+ipython==8.3.0
 itsdangerous==2.1.2
+jedi==0.18.1
 Jinja2==3.1.2
 jsmin==3.0.1
+limits==2.6.2
 llvmlite==0.38.0
 MarkupSafe==2.1.1
+matplotlib-inline==0.1.3
 numba==0.55.1
 numpy==1.21.6
 openpyxl==3.0.9
+packaging==21.3
 pandas==1.4.2
+parso==0.8.3
+pickleshare==0.7.5
 Pillow==9.1.0
 pipenv==2022.5.2
 platformdirs==2.5.2
+prompt-toolkit==3.0.29
 psutil==5.9.0
+pure-eval==0.2.2
 pycparser==2.21
+Pygments==2.12.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 readerwriterlock==1.0.9
 requests==2.27.1
+rich==12.4.1
 six==1.16.0
 soupsieve==2.3.2.post1
+stack-data==0.2.0
+traitlets==5.2.1.post0
 typing_extensions==4.2.0
 tzdata==2022.1
 tzlocal==4.2
@@ -59,9 +82,9 @@ urllib3==1.26.9
 user-agents==2.2.0
 virtualenv==20.14.1
 virtualenv-clone==0.5.7
+wcwidth==0.2.5
 webassets==2.0
 Werkzeug==2.1.2
+wrapt==1.14.1
 zope.event==4.5.0
 zope.interface==5.4.0
-python-dotenv==0.20.0
-Flask-Limiter==2.4.5.1
