the 78th commit

--- a/wsgi.ini
+++ b/wsgi.ini
@@ -1,11 +1,15 @@
 [uwsgi]
 socket = 0.0.0.0:8000
+uid=root
+gid=root
 chdir = /tmp/flask
 reload-mercy=8
 master = True
 wsgi-file = /tmp/flask/wsgi.py
 callable = app
+enable-threads=true
 processes = 1
-threads = 60
+threads = 50
+post-buffering=4096
 vacuum = true
 lazy-apps=true
